# less_slow.py

./: .gitignore  README.md  less_slow.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: release.yml
