[project]
name = "less_slow"
version = "0.5.0"
description = "Microbenchmarks for a performance-first mindset in Python"
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/ashvardanian/less_slow.py"
Repository = "https://github.com/ashvardanian/less_slow.py"
Issues = "https://github.com/ashvardanian/less_slow.py/issues"
"For C++" = "https://github.com/ashvardanian/less_slow.cpp"
"For Rust" = "https://github.com/ashvardanian/less_slow.rs"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
